# lecture

week1/00_oop/: main.cpp
week1/01_container/: container.h  list.h  main.cpp  vector.h
week1/02_review/: enums.cpp  lambdas.cpp  namespaces.cpp
week2/00_move/: move.cpp
week2/01_rule_of_5/: main.cpp  string.h
week2/02_virtual/: main.cpp
week3/: 00_ctors.cpp  01_values.cpp  02_inc.cpp  03_oop.cpp  04_dynamic_cast.cpp  05_inheritance.cpp  06_fp.cpp
week5/: 00_virtual_dtors.cpp  01_todo.cpp  02_oop.cpp  03_entities.cpp
week6/: 00_iterators.cpp  01_initializer_list.cpp  02_functors.cpp
week8/: .gitignore  CMakeLists.txt  README.md  copy-assets.cmake
week8/src/: ball.h  block.h  game_object.cpp  game_object.h  main.cpp  player.h  vector.h  vector_test.cpp  world.cpp  world.h
week9/: 00_review.cpp  01_diamond.cpp
